projects/vb6parse/snapshots/tests/statements/system_interaction/app_activate/appactivate_at_module_level.snap
---
source: projects/vb6parse/tests/statements/system_interaction/app_activate.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AppActivateStatement
      children:
        - kind: AppActivateKeyword
          text: AppActivate
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"MyApp\""
    - kind: Newline
      text: "\n"
